# docs/swagger.json
@@ -18,6 +18,70 @@
     "host": "hamsnet.swagger.io",
     "basePath": "/api/v1",
     "paths": {
+        "/auth/login": {
+            "post": {
+                "description": "Responds with user id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Responds with user id",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.AuthUserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HttpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HttpError"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "description": "Responds with user id",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Responds with user id",
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/types.AuthUserResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HttpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httputil.HttpError"
+                        }
+                    }
+                }
+            }
+        },
         "/hamsters": {
             "post": {
                 "description": "Responds with created hamster post",
@@ -25,17 +89,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "feed"
+                    "hamster posts"
                 ],
                 "summary": "Responds with created hamster post",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/types.CreateHamsterResponse"
                         }
                     },
                     "400": {
@@ -66,7 +127,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "feed"
+                    "hamster posts"
                 ],
                 "summary": "Responds with a list of hamster posts",
                 "responses": {
@@ -92,7 +153,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "feed"
+                    "hamster posts"
                 ],
                 "summary": "Responds with the hamster post with the given id",
                 "responses": {
@@ -173,6 +234,22 @@
                 },
                 "likesCount": {
                     "type": "integer"
+                }
+            }
+        },
+        "types.AuthUserResponse": {
+            "type": "object",
+            "properties": {
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "types.CreateHamsterResponse": {
+            "type": "object",
+            "properties": {
+                "post_id": {
+                    "type": "string"
                 }
             }
         }
