# internal/handlers/auth.go
@@ -18,12 +18,34 @@ func NewAuthHandler(store *store.Store) *AuthHandler {
 }
 
 func (h *AuthHandler) RegisterRoutes(router chi.Router) {
-	router.Post("/login", h.Login)
-	router.Post("/register", h.Register)
+	router.Route("/auth", func(r chi.Router) {
+		r.Post("/login", h.Login)
+		r.Post("/register", h.Register)
+	})
 }
 
+// HandleLogin godoc
+// @Summary Responds with user id
+// @Description Responds with user id
+// @Tags auth
+// @Produce json
+// @FormParam username string true "Username"
+// @FormParam password string true "Password"
+// @Success 200 {object} types.AuthUserResponse
+// @Failure 400 {object} httputil.HttpError
+// @Failure 500 {object} httputil.HttpError
+// @Router /auth/login [post]
 func (h *AuthHandler) Login(w http.ResponseWriter, r *http.Request) {
 }
 
+// HandleLogin godoc
+// @Summary Responds with user id
+// @Description Responds with user id
+// @Tags auth
+// @Produce json
+// @Success 201 {object} types.AuthUserResponse
+// @Failure 400 {object} httputil.HttpError
+// @Failure 500 {object} httputil.HttpError
+// @Router /auth/register [post]
 func (h *AuthHandler) Register(w http.ResponseWriter, r *http.Request) {
 }
