# internal/types/user.go
@@ -1,0 +1,5 @@
+package types
+
+type AuthUserResponse struct {
+	UserId string `json:"user_id"`
+}
